[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/SceneMainGameBottomMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SceneTechTree.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/Elements/UIButton.tscn" type="PackedScene" id=3]

[node name="SceneMainGameBottomMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_bottom = -5.0
rect_pivot_offset = Vector2( -293.95, -81.1775 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenes" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TechTree" parent="Scenes" instance=ExtResource( 2 )]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 536.0
margin_right = 1023.0
margin_bottom = 600.0
color = Color( 0.247059, 0.247059, 0.247059, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = -0.321
anchor_top = -0.25
anchor_right = 1.321
anchor_bottom = 1.25
margin_left = 391.383
margin_top = 692.75
margin_right = -376.383
margin_bottom = -163.75
rect_scale = Vector2( 0.982356, 1.18101 )
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn Menu" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_right = 139.0
margin_bottom = 36.0
text = "Main Menu"

[node name="Map" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 163.0
margin_right = 225.0
margin_bottom = 36.0
text = "Map"

[node name="Overview" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 249.0
margin_right = 366.0
margin_bottom = 36.0
text = "Overview"

[node name="Build" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 390.0
margin_right = 464.0
margin_bottom = 36.0
text = "Store"

[node name="Kittens" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 488.0
margin_right = 578.0
margin_bottom = 36.0
text = "Kittens"

[node name="Research" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 602.0
margin_right = 720.0
margin_bottom = 36.0
text = "Research"

[node name="Leaderboard" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 744.0
margin_right = 907.0
margin_bottom = 36.0
text = "Leaderboard"

[connection signal="pressed" from="HBoxContainer/Btn Menu" to="." method="_on_Btn_Menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Map" to="." method="_on_Map_pressed"]
[connection signal="pressed" from="HBoxContainer/Overview" to="." method="_on_Overview_pressed"]
[connection signal="pressed" from="HBoxContainer/Build" to="." method="_on_Build_pressed"]
[connection signal="pressed" from="HBoxContainer/Kittens" to="." method="_on_Kittens_pressed"]
[connection signal="pressed" from="HBoxContainer/Research" to="." method="_on_Research_pressed"]
[connection signal="pressed" from="HBoxContainer/Leaderboard" to="." method="_on_Leaderboard_pressed"]
